<resources>
    <string name="app_name">GymProject</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="reg_btn">Create a new account</string>
    <string name="mail_txt">Enter your mail</string>
    <string name="login_btn">Login</string>
    <string name="or_text">OR</string>
    <string name="login_text">Log in</string>
    <string name="member_text">Already a member?</string>
    <string name="click_here_btn">Click here</string>
    <string name="reg_text">Register</string>
    <string name="pas_txt">Enter your password</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="repeat_pass">Repeat your password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="new_member">New member?</string>
    <string name="my_details_text">My details</string>
    <string name="age_text">Enter your age</string>
    <string name="height_text">Enter your height</string>
    <string name="gender_text">Select your gender</string>
    <string name="weight_text">Enter your weight</string>
    <string name="finish_btn">Finish</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="body_fat">Enter percent body fat</string>
    <string name="pass_recover_text">Password recover</string>
    <string name="recover_my_pass_btn">Recover my password</string>
    <string name="facebook_app_id">174059530511142</string>
    <string name="login_fb_btn">Login</string>
    <string name="exe_top">Choose exercise</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Email</string>
    <string name="fb_login_protocol_scheme">fb174059530511142</string>
    <string name="my_progress">My progress</string>
    <string name="my_weight">"My current weight is: "</string>
    <string name="creating_fat_percentages">Creating fat percentages</string>
    <string name="neck_circumference">Enter neck circumference</string>
    <string name="extent_of_waist">Enter extent of waist</string>
    <string name="main_menu_header">Main menu</string>
    <string name="successful_register">The register succssesfulled</string>
    <string name="my_workout">My Workout</string>
    <string name="weekly_activates">Weekly Activates</string>
    <string name="update_details">Update Details</string>
    <string name="preferences">Preferences</string>
    <string name="register_failed">The register failed! this email is already exists. try again</string>
    <string name="user_name_and_pass_wrong">Wrong user name or password</string>
    <string name="email_required">Email required</string>
    <string name="password_length">Password should be at least 6 characters long</string>
    <string name="valid_email">Enter a valid email</string>
    <string name="pass_not_match">The passwords not match! try agai</string>
    <string name="first_name_required">First name required</string>
    <string name="last_name_required">Last name required</string>
    <string name="details_save">Your details has been saved</string>
    <string name="password_recovery">New password sent to your email</string>
    <string name="string_length">Please insert less characters</string>
    <string name="height_rquiered">Height required</string>
    <string name="weight_rquiered">Weight requierd</string>
    <string name="age_requiered">Age required</string>
    <string name="fat_percent_rquierd">Fat percent requierd</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="Weight">Weight</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="add_new_workout">Add new workout:</string>
    <string name="select_image">Select image:</string>
    <string name="add">Add</string>
    <string name="logoff_btn">Logoff</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="weight">Weight:</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="kg">KG</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="percent_body_fat">percent Body Fat</string>
    <string name="breeding_dumbbells_lying">Breeding dumbbells lying</string>
    <string name="climbs_the_trunk">Climbs the trunk</string>
    <string name="dumbbell_bench_press">Dumbbell bench press</string>
    <string name="concentrated_bending_arms">Concentrated bending arms</string>
    <string name="curl_with_a_dumbbell">Curl with a dumbbell</string>
    <string name="curls_on_the_bench">Curls on the bench</string>
    <string name="dips">Dips</string>
    <string name="bent_over_dumbbell_rows">Bent-over dumbbell rows</string>
    <string name="lat_pulldowens">Lat Pulldowens</string>
    <string name="lat_pulldowens_block_the_neck">lat pulldowens block the neck</string>
    <string name="extension_arms_with_a_dumbbell">Extension arms with a dumbbell</string>
    <string name="tricep_push_down">Tricep push down</string>
    <string name="flexion_simulator_leg">Flexion simulator leg</string>
    <string name="bicep_free">Bicep free</string>
    <string name="leg_extension">Leg extension</string>
    <string name="lunges_with_dumbbells">Lunges with dumbbells</string>
    <string name="middle_cable_fly">Middle cable fly</string>
    <string name="bench_press">Bench press</string>
    <string name="pull_ups">Pull ups</string>
    <string name="pull_on_deltoids">Pull on deltoids</string>
    <string name="reduction_of_arms">Reduction of arms</string>
    <string name="run">Run</string>
    <string name="seated_chests">Seated chests</string>
    <string name="standing_calf_raises">Standing calf raises</string>
    <string name="straightening_simulator_wheel">Straightening simulator wheel</string>


    <string-array name="language">
    <item>English</item>
    <item>Hebrew</item>
</string-array>

    <string-array name="Weight">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string name="my_workouts">My Workouts</string>
    <string name="workout_name">Workout Name</string>
    <string name="zumba_event">Zumba</string>
    <string name="aerobic_event">aerobic</string>
    <string name="yoga_event">yoga</string>
    <string name="pilates_event">pilates</string>
    <string name="sculpting_event">sculpting</string>
    <string name="HIT_event">HIT</string>
    <string name="workout_station_event">workout station</string>
    <string name="kick_box_event">kick box</string>
    <string name="TRX_event">TRX</string>
    <string name="no_activity_event">No Activity</string>

</resources>
