<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@drawable/register_top"
        android:gravity="bottom">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:src="@drawable/logo_transperent_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_text"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">


            <EditText
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/first_name"
                android:drawableEnd="@drawable/ic_person_outline_black_18dp"
                android:drawableRight="@drawable/ic_person_outline_black_18dp"
                android:paddingEnd="10dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/last_name"
                android:drawableEnd="@drawable/ic_person_outline_black_18dp"
                android:drawableRight="@drawable/ic_person_outline_black_18dp"
                android:paddingEnd="10dp"
                />



            <EditText
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/mail_txt"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:drawableEnd="@drawable/ic_mail_outline_black_18dp"
                android:drawableRight="@drawable/ic_mail_outline_black_18dp"
                android:paddingEnd="10dp"/>




            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_style"
                android:gravity="end"
                android:hint="@string/pas_txt"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                android:paddingEnd="10dp"/>





            <EditText
                android:id="@+id/rep_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/repeat_pass"
                android:gravity="end"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                android:paddingEnd="10dp"
                />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_selector"
            android:text="@string/reg_btn"
            android:textAllCaps="false"
            android:id="@+id/reg_btn_end"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/click_here_btn"
                android:textAllCaps="false"
                android:id="@+id/clickHereDetails_btn"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>