<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@drawable/register_top"
        android:gravity="bottom">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:src="@drawable/logo_transperent_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_details_text"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="0dp"
                android:text="@string/gender_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">


                <ImageButton
                    android:id="@+id/maleIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                   android:layout_gravity="center|right"
                    android:background="@drawable/male_icon_new"
                    />

                <ImageButton
                    android:id="@+id/femaleBtn"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/female_icon_new" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/height_text"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/weight_text"

            android:paddingStart="10dp"
            android:paddingLeft="10dp" />


        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/age_text"/>




        <EditText
            android:id="@+id/body_fat_text"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/body_fat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_selector"
            android:text="@string/finish_btn"
            android:textAllCaps="false"
            android:id="@+id/finish_details_btn"
            android:textColor="@android:color/white"

            />

    </LinearLayout>



</LinearLayout>