<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@drawable/register_top"
        android:gravity="bottom">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo_transperent_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_details_text"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:text="@string/gender_text"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/male_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/maleIcon" />



                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"

                    android:background="@drawable/female_icon"

                    />


            </RelativeLayout>

        </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/height_text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/weight_text"

                android:paddingStart="10dp"
                android:paddingLeft="10dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/age_text"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_selector"
            android:text="@string/finish_btn"
            android:textAllCaps="false" />

    </LinearLayout>



</LinearLayout>