<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@drawable/register_top"
        android:gravity="bottom">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo_transperent_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_recover_text"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_text_recover_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_style"
            android:drawableEnd="@drawable/ic_mail_outline_black_18dp"
            android:drawableRight="@drawable/ic_mail_outline_black_18dp"
            android:hint="@string/mail_txt"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp"

            android:background="@drawable/shape_selector"
            android:text="@string/recover_my_pass_btn"
            android:textAllCaps="false"
            android:id="@+id/recover_pass_btn"
            />




    </LinearLayout>


    </LinearLayout>
